# hbackup

./: Cargo.toml  LICENSE  Makefile.toml  README.md  README.zh-CN.md  README_zh.md  deny.toml
.github/: dependabot.yml
.github/workflows/: .travis.yml  build.yml  ci.yml  publish.yml  release.yml  rust.yml  security.yml
docs/: DESIGN.md
hbackup-cli/: Cargo.toml
hbackup-cli/src/: args.rs  constants.rs  main.rs
hbackup-cli/src/commands/: add.rs  config.rs  delete.rs  edit.rs  list.rs  mod.rs  run.rs
hbackup-core/: Cargo.toml
hbackup-core/src/: error.rs  lib.rs
hbackup-core/src/engine/: executor.rs
hbackup-core/src/model/: config.rs  job.rs
hbackup-core/src/pipeline/: archive.rs  mirror.rs  mod.rs  stage.rs
scripts/: build-all.sh  security.sh  test-all.sh  test.sh
src/: application.rs  commands.rs  common.rs  constants.rs  delete_yes_test.rs  error.rs  file_util.rs  item.rs  job.rs  lib.rs  main.rs  path.rs  path_util.rs  sysexits.rs  task.rs
tests/: cli.rs  cli_delete_integration.rs  delete_yes.rs  integration_file_util.rs
