[workspace]
members = ["hbackup-cli", "hbackup-core"]
resolver = "3"

[workspace.dependencies]
clap = "4.6.0"
tokio = "1.50.0"
anyhow = "1.0.102"
serde = "1.0.228"
dirs = "6.0.0"
thiserror = "2.0.18"
toml = "1.0.6"
tempfile = "3.27.0"

[profile.release]
debug = 1
panic = "abort"

[profile.release-lto]
inherits = "release"
opt-level = 3
strip = "symbols"
lto = "fat"
panic = "abort"
debug-assertions = false
incremental = false
codegen-units = 1
