[workspace]
members = ["hbackup-cli", "hbackup-core"]
resolver = "3"

[workspace.dependencies]
clap = "4.6.0"
tokio = "1.50.0"
anyhow = "1.0.102"
serde = "1.0.228"
dirs = "6.0.0"
thiserror = "2.0.18"
toml = "1.0.7"
tempfile = "3.27.0"
walkdir = "2.5.0"
ignore = "0.4.25"
tar = "0.4.44"
flate2 = "1.1.9"
zip = { version = "8.2.0", default-features = false, features = ["deflate"] }
sevenz-rust2 = "0.20.2"
zstd = "0.13.3"
bzip2 = "0.6.1"
xz2 = "0.1.7"
lz4 = "1.28.1"

[profile.release]
debug = 1
panic = "abort"

[profile.release-lto]
inherits = "release"
opt-level = 3
strip = "symbols"
lto = "fat"
panic = "abort"
debug-assertions = false
incremental = false
codegen-units = 1
