[package]
name = "hbackup"
version = "0.6.0-beta"
edition = "2024"
authors = ["asthetik"]
homepage = "https://github.com/asthetik/hbackup"
repository = "https://github.com/asthetik/hbackup"
description = """
hbackup is a sample, high-performance, cross-platform backup tool written
in Rust. It is designed to be fast, efficient, and easy to use,
with a focus on performance and reliability.
"""
license = "MIT"
keywords = ["hbackup", "bk", "backup", "cli"]
categories = ["command-line-utilities"]
exclude = [
    ".github/*",
    "scripts/*",
    "deny.toml",
]
rust-version = "1.88.0"

[dependencies]
hbackup-core = {path = "../hbackup-core", features = ["clap"] }
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt-multi-thread", "fs", "macros"] }
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
tempfile.workspace = true
toml.workspace = true

[[bin]]
name = "bk"
path = "src/main.rs"

