[package]
name = "hbackup-core"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
tokio.workspace = true
clap = { workspace = true, optional = true }
serde.workspace = true
anyhow.workspace = true
dirs.workspace = true
thiserror.workspace = true
toml.workspace = true

[features]
clap = ["dep:clap"]

[dev-dependencies]
tempfile.workspace = true