[package]
name = "hbackup-core"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
clap = { workspace = true, optional = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
anyhow.workspace = true
dirs.workspace = true
thiserror.workspace = true
toml.workspace = true
walkdir.workspace = true
ignore.workspace = true

[features]
clap = ["dep:clap"]

[dev-dependencies]
tempfile.workspace = true